=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.18 - March, 08, 2012

=over

=item *

Templates can now be checked-out in bulk through the UI just like Stories
and Media. [Michael Peters]

=item *

Media Bulk Upload UI now remembers the last category that was used just
like the New Media screen. [Michael Peters]

=item *

Searching for media by filename no longer wild cards non-word characters
since those are important in file names (like ".") [Michael Peters]

=item *

Templates that are deployed from the "Find Templates" screen are
now checked-in if they were checked-out by the person doing the
deployings. This way deploy from "Find Templates" works the same as
deploy from "Edit Template" [Michael Peters]

=item *

Publisher now looks at all the categories for a story in the
C<_add_category_linked_stories()> method. [Brad Oaks]

=item *

Deleting or retiring a story in the UI will now redirect to publish_story_list
if category linked stories need published. [Brad Oaks]

=item *

The Scheduler now checks all instances on startup for jobs with
daemon_uuid reservations that match our hostname.
[Daniel S. Sterling]

=item *

Added Fedora 15 & 16 as build platforms. [Michael Peters]

=item *

L<Krang::HTMLPager> now adds double-backslash-escaping to C<&#39;> and C<&apos;>
entities in the C<command_column_extra_args> for dynamic columns. [Brad Oaks]

=back

=head2 3.17 - February, 06, 2012

=over

=item *

Fixed bug in which the krang_install script did not respect the DBSock
conf file option, preventing installation and upgrade when using a 
nonstandard mysql socket location
[Rudolf Lippan]

=item *

The Scheduler now makes sure jobs either die or call clean_entry
or delete.  If they don't do one of those three things before returning,
we log an error.  This makes sure next_run is always updated.
[Daniel S. Sterling]

=item *

Added a method to ElementClass which can be overridden to decide