@@ -132,6 +132,8 @@ Returns the filename (independant of the extension) to be used when
 writing to disk data generated by this element tree.  Will return
 C<index> unless overridden.
 
+Is passed the story being processed as the C<story> named argument.
+
 =cut
 
 sub filename {
@@ -143,6 +145,8 @@ sub filename {
 Returns the file extension (see filename()) to be used when writing to
 disk data generated by this element tree.  Will return C<.html> unless
 overridden.
+
+Is passed the story being processed as the C<story> named argument.
 
 =cut
 
